build for about page.

--- a/personal_website/personal_website/templates/base.html
+++ b/personal_website/personal_website/templates/base.html
@@ -30,8 +30,9 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-            <li><a href="">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="">Work</a></li>
+            <li><li><a href="">Blog</a></li>
             <li><a href="">Contact</a></li>
         </ul>
       </div>
