build for contact form page.

--- a/personal_website/personal_website/templates/personal_website/contact.html
+++ b/personal_website/personal_website/templates/personal_website/contact.html
@@ -4,7 +4,7 @@
     <div class="container handshake">
       <div class="login-box">
         <h3 class="white">W BENJAMIN SHIELDS</h3>
-          <p>W Ben Shields...</p>
+          <p>Contact Form</p>
       </div>
     </div>
   </div>
