--- a/personal_website/personal_website/templates/base.html
+++ b/personal_website/personal_website/templates/base.html
@@ -33,7 +33,7 @@
             <li><a href="/about">About</a></li>
             <li><a href="">Work</a></li>
             <li><li><a href="">Blog</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
       </div>
     </div>
