--- a/personal_website/personal_website/templates/base.html
+++ b/personal_website/personal_website/templates/base.html
@@ -32,7 +32,7 @@
         <ul class="nav navbar-nav">
             <li><a href="/about">About</a></li>
             <li><a href="/work">Work</a></li>
-            <li><li><a href="">Blog</a></li>
+            <li><li><a href="/blog">Blog</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
       </div>
