--- a/personal_website/personal_website/templates/base.html
+++ b/personal_website/personal_website/templates/base.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/cf_logo.png' %}" height = 25, width= 25/></a>
+        <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/shield_s_symbol.png' %}" height = 25, width= 25/></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
