--- a/personal_website/personal_website/static/style.css
+++ b/personal_website/personal_website/static/style.css
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
 .navbar-brand{
     position: relative;
     left: 8.45px;
-    bottom: 4.5px ;
+    bottom: 1px ;
 }
 
 textarea, select, input {
@@ -179,6 +179,6 @@ footer {
     width: 100%;
 }
 
-* {
+/** {
     border: 1px solid red;
-}
+}*/
