--- a/personal_website/personal_website/templates/personal_website/about.html
+++ b/personal_website/personal_website/templates/personal_website/about.html
@@ -2,9 +2,21 @@
 {% block body %}
   <div class="row content">
     <div class="container handshake">
-      <div class="login-box">
+      <div class="">
         <h3 class="white">W BENJAMIN SHIELDS</h3>
-          <p>W Ben Shields...</p>
+          <p>William Benjamin Shields was born in Tacoma, WA two days before Christmas, the day the Bradenburg Gate opened for the first time in 28 years and Leonard Bernstein conducted Beethoven's Ninth Symphony in Berlin with musicians from East and West Germany as well as from all over the world to celebrate the liberation of all men from oppression. That night in Tacoma there occured an earthquake and a shooting at St. Joseph's Hospital where Shields' was born.
+          </p>
+          <br>
+          <p>Shields began a life of music in earnest. When barely the size of a loaf of bread, his mother would lay him on the counter where he would listen to classical music and laugh and laugh and laugh. At the age of three he began his first music lessons with Andrea Bryant in Gig Harbor. At age eight he began playing in local orchestras. At age eight, Shields family purchased a piano whereupon he began teaching himself piano. At age nine, Shields began writing his first musical compositions. At age eleven, Shields musical education continued with trombone lessons and music theory. In high school Shields served as the concertmaster of the Tacoma Youth Symphony. He attended both the Interlochen Arts Camp and the Boston University Tanglewood Institute, serving as concermaster and associate concermaster at orchestras at these programs. At this time, Shields began studying violin with Ron Patterson, a pupil of Jascha Heifetz. Also at this time, Shields began conducting lessons with Harvey Felder of the Tacoma Symphony Orchestra. Shields made his conducting debut with the Tacoma Symphony Orchestra at this time at the age of 16. Shields performed solo concerto works at this time with the Tacoma Youth Symphony and the Gig Harbor Symphony. In his senior year of high school, Shields played with the Seattle Symphony as a Seattle Symphony Gold Medalist. The summer after his senior year, Shields studied at the Meadowmount School of Music with David Russell, a student of Ivan Galamian, previously a violin professor at the Cleveland Institute of Music.</p>
+          <br>
+          <p>Shields began undergraduate studies at Stanford University in 2008. At Stanford he studied conducting with Jindong Cai and Martin Fraile, music theory with Talya Berger and George Barth, and violin with Robin Sharp. Shields graduated from Stanford with a Bachelor of Arts in English.
+          </p>
+          <br>
+          <p>In 2010 Shields attended the Bard Conductors Institute where he studied conducting with Harold Farberman and Apo Hsu.
+          </p>
+          <br>
+          <p>In addition to musical pursuits, Shields interests are broad and varied. A true Rennaissance Man, his passions include philosophy, biology, development, art, and mathematics.
+          </p>
       </div>
     </div>
   </div>
