--- a/personal_website/personal_website/templates/personal_website/contact.html
+++ b/personal_website/personal_website/templates/personal_website/contact.html
@@ -2,7 +2,7 @@
 {% block body %}
   <div class="row content">
     <div class="container handshake">
-      <div class="login-box">
+      <div class="">
         <h3 class="white">W BENJAMIN SHIELDS</h3>
           <p>Contact Form</p>
       </div>
